--- a/build.gradle
+++ b/build.gradle
@@ -5,9 +5,10 @@ buildscript {
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.1.3'
+        classpath 'com.android.tools.build:gradle:2.2.2'
+        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.4'
+        classpath 'com.github.dcendents:android-maven-gradle-plugin:1.4.1'
         classpath 'com.github.JakeWharton:sdk-manager-plugin:220bf7a88a7072df3ed16dc8466fb144f2817070'
-        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.0'
     }
 }
 
@@ -17,8 +18,6 @@ subprojects {
         mavenLocal()
     }
 
-    version = '3.4.0'
-    group = 'com.journeyapps'
     apply plugin: 'android-sdk-manager'
 
     ext.androidBuildTools = '23.0.2'
